# uv-template

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  typos.toml
.claude/: settings.json
.claude/rules/: docs.md  pyproject.md  python.md  testing.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/smart-commit/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check-pr-title.yml  ci.yml  docs.yml  release.yml
contributing/: index.html
docs/: getting-started.md  index.md  reference.md
getting-started/: index.html
reference/: index.html
scripts/: no-commit-to-main.sh  smoke_test.py
search/: search_index.json
src/my_package/: __init__.py  core.py
tests/: conftest.py  test_core.py
